added the bib file

--- a/Thesis.tex
+++ b/Thesis.tex
@@ -130,9 +130,11 @@
 % ABSTRACT IN ENGLISH
 \chapter*{Abstract} 
 Here goes the Abstract in English of your thesis followed by a list of keywords.
+\cite{luanHighentropyInducedGlasstoglass2022}
 The Abstract is a concise summary of the content of the thesis (single page of text)
 and a guide to the most important contributions included in your thesis.
 The Abstract is the very last thing you write.
+\cite{norvilleStrengthNewHeatTreated1993}
 It should be a self-contained text and should be clear to someone who hasn't (yet) read the whole manuscript.
 The Abstract should contain the answers to the main scientific questions that have been addressed in your thesis.
 It needs to summarize the adopted motivations and the adopted methodological approach as well as the findings of your work and their relevance and impact.
@@ -489,7 +491,7 @@ and possible future developments of your work have to be inserted in this chapte
 %-------------------------------------------------------------------------
 
 \addtocontents{toc}{\vspace{2em}} % Add a gap in the Contents, for aesthetics
-\bibliography{Thesis_bibliography} % The references information are stored in the file named "Thesis_bibliography.bib"
+\bibliography{master_thesis.bib} % The references information are stored in the file named "Thesis_bibliography.bib"
 
 %-------------------------------------------------------------------------
 %	APPENDICES
