--- a/master_thesis.bib
+++ b/master_thesis.bib
@@ -1,38 +1,39 @@
-@article{luanHighentropyInducedGlasstoglass2022,
-  title = {High-Entropy Induced a Glass-to-Glass Transition in a Metallic Glass},
-  author = {Luan, Hengwei and Zhang, Xin and Ding, Hongyu and Zhang, Fei and Luan, J. H. and Jiao, Z. B. and Yang, Yi-Chieh and Bu, Hengtong and Wang, Ranbin and Gu, Jialun and Shao, Chunlin and Yu, Qing and Shao, Yang and Zeng, Qiaoshi and Chen, Na and Liu, C. T. and Yao, Ke-Fu},
-  year = {2022},
-  month = apr,
-  journal = {Nature Communications},
-  volume = {13},
-  number = {1},
-  pages = {2183},
-  publisher = {{Nature Publishing Group}},
-  issn = {2041-1723},
-  doi = {10.1038/s41467-022-29789-1},
-  urldate = {2024-02-01},
-  abstract = {Glass-to-glass transitions are useful for us to understand the glass nature, but it remains difficult to tune the metallic glass into significantly different glass states. Here, we have demonstrated that the high-entropy can enhance the degree of disorder in an equiatomic high-entropy metallic glass NbNiZrTiCo and elevate it to a high-energy glass state. An unusual glass-to-glass phase transition is discovered during heating with an enormous heat release even larger than that of the following crystallization at higher temperatures. Dramatic atomic rearrangement with a short- and medium-range ordering is revealed by in-situ synchrotron X-ray diffraction analyses. This glass-to-glass transition leads to a significant improvement in the modulus, hardness, and thermal stability, all of which could promote their applications. Based on the proposed high-entropy effect, two high-entropy metallic glasses are developed and they show similar glass-to-glass transitions. These findings uncover a high-entropy effect in metallic glasses and create a pathway for tuning the glass states and properties.},
-  copyright = {2022 The Author(s)},
-  langid = {english},
-  keywords = {Glasses,Metals and alloys},
-  file = {C:\Users\davno\Zotero\storage\VQSX2JCZ\Luan et al. - 2022 - High-entropy induced a glass-to-glass transition i.pdf}
+@article{CrackingHighestGlass2010,
+  title = {Cracking the {{Highest Glass Ceiling}}},
+  year = {2010},
+  pages = {1--288},
+  publisher = {{Bloomsbury Publishing}},
+  urldate = {2024-02-02},
+  abstract = {Purchase online the PDF of Cracking the Highest Glass Ceiling, - Bloomsbury Publishing - E-book},
+  langid = {english}
 }
 
-@article{norvilleStrengthNewHeatTreated1993,
-  title = {Strength of {{New Heat-Treated Window Glass Lites}} and {{Laminated Glass Units}}},
-  author = {Norville, Hs and Bove, Pm and Sheridan, Dl and Lawrence, Sl},
-  year = {1993},
-  month = mar,
-  journal = {JOURNAL OF STRUCTURAL ENGINEERING-ASCE},
-  volume = {119},
-  number = {3},
-  pages = {891--901},
-  publisher = {{Asce-Amer Soc Civil Engineers}},
-  address = {{New York}},
-  issn = {0733-9445},
-  doi = {10.1061/(ASCE)0733-9445(1993)119:3(891)},
-  urldate = {2024-02-01},
-  abstract = {The strengths of certain window glass types, window glass constructions, and window glass treatments are poorly understood by the window-glass-design community. Many assumptions are employed in defining the design strengths of various window-glass types, constructions, and treatments such as laminated glass, heat-strengthened glass, and insulating glass. As part of its ongoing research program into the strength of window glass, the Glass Research and Testing Laboratory at Texas Tech University conducted strength tests on fully tempered monolithic glass lites, heat-strengthened monolithic glass lites, fully tempered laminated-glass units, and heat-strengthened laminated glass-units. The objective of these tests was to determine the strengths of these glass types and constructions relative to monolithic annealed glass lites with the same nominal dimensions. The failure strength data resulting from these tests differ significantly compared to the assumptions underlying design strengths proposed by ASTM for these glass types and constructions.},
-  langid = {english},
-  annotation = {Web of Science ID: WOS:A1993KN71000013}
+@article{jackleModelsGlassTransition1986,
+  title = {Models of the Glass Transition},
+  author = {Jackle, J.},
+  year = {1986},
+  month = feb,
+  journal = {Reports on Progress in Physics},
+  volume = {49},
+  number = {2},
+  pages = {171},
+  issn = {0034-4885},
+  doi = {10.1088/0034-4885/49/2/002},
+  urldate = {2024-02-02},
+  abstract = {The different physical aspects of glass transitions are reviewed and models aiming at their explanation are described. The following three main aspects are distinguished: the degree of stability of supercooled liquids with respect to crystallisation; the variation of physical properties of supercooled liquids in metastable equilibrium above the glass transition; the arrest of structural relaxation at the glass transition. The physical significance of computer simulations of glass transitions in simple liquids and the question of a hidden phase transition underlying an observed glass transition are examined critically. In relation to the stability problem, the geometrical constraints operative in typical disordered structures, such as random sphere packings and random covalent networks, are also discussed. A general survey of glass transition phenomena and concepts is presented in an introductory section.},
+  langid = {english}
+}
+
+@article{jackleModelsGlassTransition1986a,
+  title = {Models of the Glass Transition},
+  author = {Jackle, J},
+  year = {1986},
+  month = feb,
+  journal = {Reports on Progress in Physics},
+  volume = {49},
+  number = {2},
+  pages = {171--231},
+  issn = {0034-4885, 1361-6633},
+  doi = {10.1088/0034-4885/49/2/002},
+  urldate = {2024-02-02}
 }
