added a bibliography entry

--- a/Thesis.tex
+++ b/Thesis.tex
@@ -134,6 +134,7 @@ The Abstract is a concise summary of the content of the thesis (single page of t
 \cite{jackleModelsGlassTransition1986}
 and a guide to the most important contributions included in your thesis.
 The Abstract is the very last thing you write.
+\cite{wallenbergerGlassFibers2001}
 It should be a self-contained text and should be clear to someone who hasn't (yet) read the whole manuscript.
 The Abstract should contain the answers to the main scientific questions that have been addressed in your thesis.
 It needs to summarize the adopted motivations and the adopted methodological approach as well as the findings of your work and their relevance and impact.
