--- a/master_thesis.bib
+++ b/master_thesis.bib
@@ -37,3 +37,17 @@
   doi = {10.1088/0034-4885/49/2/002},
   urldate = {2024-02-02}
 }
+
+@article{wallenbergerGlassFibers2001,
+  title = {Glass {{Fibers}}},
+  author = {Wallenberger, Frederick T. and Watson, James C. and Li, Hong},
+  year = {2001},
+  month = jan,
+  journal = {Composites},
+  pages = {27--34},
+  publisher = {{ASM International}},
+  doi = {10.31399/asm.hb.v21.a0003353},
+  urldate = {2024-02-02},
+  abstract = {\&lt;jats:title\&gt;Abstract\&lt;/jats:title\&gt;                \&lt;jats:p\&gt;This article discusses the types, oxide composition, as well as mechanical and physical properties of general-purpose and special-purpose glass fibers. It describes the glass melting and fiber forming processes and provides information on important commercial products such as continuous roving, woven roving, fiberglass mat, chopped strand, and textile yarns.\&lt;/jats:p\&gt;},
+  file = {C:\Users\davno\Zotero\storage\RAQI7EY8\1360576122697678592.html}
+}
