--- a/Thesis_bibliography.bib
+++ b/Thesis_bibliography.bib
@@ -1,224 +1,53 @@
-%% This BibTeX bibliography file was created using BibDesk.
-%% http://bibdesk.sourceforge.net/
-% Encoding: UTF-8
-
-@article{knuth74,
-    author = {Knuth, Donald E.},
-    title = {Computer Programming As an Art},
-    journal = {Commun. ACM},
-    year = {1974},
-    pages = {667--673},
-    numpages = {7},
-    publisher = {ACM},
-    address = {New York, NY, USA}
+@article{CrackingHighestGlass2010,
+  title = {Cracking the {{Highest Glass Ceiling}}},
+  year = {2010},
+  pages = {1--288},
+  publisher = {{Bloomsbury Publishing}},
+  urldate = {2024-02-02},
+  abstract = {Purchase online the PDF of Cracking the Highest Glass Ceiling, - Bloomsbury Publishing - E-book},
+  langid = {english}
 }
 
-@article{knuth92,
-    author = {Knuth, Donald E.},
-    title = {Two notes on notation},
-    journal = {Amer. Math. Monthly},
-    volume = {99},
-    year = {1992},
-    pages = {403--422}
+@article{jackleModelsGlassTransition1986,
+  title = {Models of the Glass Transition},
+  author = {Jackle, J.},
+  year = {1986},
+  month = feb,
+  journal = {Reports on Progress in Physics},
+  volume = {49},
+  number = {2},
+  pages = {171},
+  issn = {0034-4885},
+  doi = {10.1088/0034-4885/49/2/002},
+  urldate = {2024-02-02},
+  abstract = {The different physical aspects of glass transitions are reviewed and models aiming at their explanation are described. The following three main aspects are distinguished: the degree of stability of supercooled liquids with respect to crystallisation; the variation of physical properties of supercooled liquids in metastable equilibrium above the glass transition; the arrest of structural relaxation at the glass transition. The physical significance of computer simulations of glass transitions in simple liquids and the question of a hidden phase transition underlying an observed glass transition are examined critically. In relation to the stability problem, the geometrical constraints operative in typical disordered structures, such as random sphere packings and random covalent networks, are also discussed. A general survey of glass transition phenomena and concepts is presented in an introductory section.},
+  langid = {english}
 }
 
-@book{lamport94,
-    title = {LaTeX: A Document Preparation System},
-    author = {Lamport, Leslie},
-    year = {1994},
-    publisher = {Pearson Education India}
+@article{jackleModelsGlassTransition1986a,
+  title = {Models of the Glass Transition},
+  author = {Jackle, J},
+  year = {1986},
+  month = feb,
+  journal = {Reports on Progress in Physics},
+  volume = {49},
+  number = {2},
+  pages = {171--231},
+  issn = {0034-4885, 1361-6633},
+  doi = {10.1088/0034-4885/49/2/002},
+  urldate = {2024-02-02}
 }
 
-@article{article,
-  author  = {Peter Adams}, 
-  title   = {The title of the work},
-  journal = {The name of the journal},
-  year    = 1993,
-  number  = 2,
-  pages   = {201-213},
-  month   = 7,
-  note    = {An optional note}, 
-  volume  = 4
-}
-
-@book{book,
-  author    = {Peter Babington}, 
-  title     = {The title of the work},
-  publisher = {The name of the publisher},
-  year      = 1993,
-  volume    = 4,
-  series    = 10,
-  address   = {The address},
-  edition   = 3,
-  month     = 7,
-  note      = {An optional note},
-  isbn      = {3257227892}
-}
-
-@booklet{booklet,
-  title        = {The title of the work},
-  author       = {Peter Caxton}, 
-  howpublished = {How it was published},
-  address      = {The address of the publisher},
-  month        = 7,
-  year         = 1993,
-  note         = {An optional note}
-}
-
-@conference{conference,
-  author       = {Peter Draper}, 
-  title        = {The title of the work},
-  booktitle    = {The title of the book},
-  year         = 1993,
-  editor       = {The editor},
-  volume       = 4,
-  series       = 5,
-  pages        = 213,
-  address      = {The address of the publisher},
-  month        = 7,
-  organization = {The organization},
-  publisher    = {The publisher},
-  note         = {An optional note}  
-}
-
-@inbook{inbook,
-  author       = {Peter Eston}, 
-  title        = {The title of the work},
-  chapter      = 8,
-  pages        = {201-213},
-  publisher    = {The name of the publisher},
-  year         = 1993,
-  volume       = 4,
-  series       = 5,
-  address      = {The address of the publisher},
-  edition      = 3,
-  month        = 7,
-  note         = {An optional note}
-}
-
-@incollection{incollection,
-  author       = {Peter Farindon}, 
-  title        = {The title of the work},
-  booktitle    = {The title of the book},
-  publisher    = {The name of the publisher},
-  year         = 1993,
-  editor       = {The editor},
-  volume       = 4,
-  series       = 5,
-  chapter      = 8,
-  pages        = {201-213},
-  address      = {The address of the publisher},
-  edition      = 3,
-  month        = 7,
-  note         = {An optional note}
-}
-
-@manual{manual,
-  title        = {The title of the work},
-  author       = {Peter Gainsford}, 
-  organization = {The organization},
-  address      = {The address of the publisher},
-  edition      = 3,
-  month        = 7,
-  year         = 1993,
-  note         = {An optional note}
-}
-
-@mastersthesis{mastersthesis,
-  author       = {Peter Harwood}, 
-  title        = {The title of the work},
-  school       = {The school of the thesis},
-  year         = 1993,
-  address      = {The address of the publisher},
-  month        = 7,
-  note         = {An optional note}
-}
-
-@misc{misc,
-  author       = {Peter Isley}, 
-  title        = {The title of the work},
-  howpublished = {How it was published},
-  month        = 7,
-  year         = 1993,
-  note         = {An optional note}
-}
-
-@phdthesis{phdthesis,
-  author       = {Peter Joslin}, 
-  title        = {The title of the work},
-  school       = {The school of the thesis},
-  year         = 1993,
-  address      = {The address of the publisher},
-  month        = 7,
-  note         = {An optional note}
-}
-
-@proceedings{proceedings,
-  title        = {The title of the work},
-  year         = 1993,
-  editor       = {Peter Kidwelly},
-  volume       = 4,
-  series       = 5,
-  address      = {The address of the publisher},
-  month        = 7,
-  organization = {The organization},
-  publisher    = {The name of the publisher},
-  note         = {An optional note}
-}
-
-@techreport{techreport,
-  author       = {Peter Lambert}, 
-  title        = {The title of the work},
-  institution  = {The institution that published},
-  year         = 1993,
-  number       = 2,
-  address      = {The address of the publisher},
-  month        = 7,
-  note         = {An optional note}
-}
-
-@unpublished{unpublished,
-  author       = {Peter Marcheford}, 
-  title        = {The title of the work},
-  note         = {An optional note},
-  month        = 7,
-  year         = 1993
-}
-
-@online{online,
-  author       = {MultiMedia LLC}, 
-  title        = {{MS Windows NT} Kernel Description},
-  year         = 1999,
-  url          = {http://www.whateveritis.com},
-  urldate      = {2010-09-30}
-}
-
-@patent{edison,
-    title      = {Electric distribution system},
-    author     = {Edison, Thomas A.},
-    number     = {266793},
-    type       = {patentus},
-    date       = {1882-10-31}
-}
-
-@article{oetiker1995not,
-  title={The not so short introduction to LATEX2$\varepsilon$},
-  author={Oetiker, Tobias and Partl, Hubert and Hyna, Irene and Schlegl, Elisabeth},
-  journal={Electronic document available at http://www. tex. ac. uk/tex-archive/info/lshort},
-  year={1995},
-  publisher={Citeseer}
-}
-
-@book{kottwitz2015latex,
-  title={LaTeX Cookbook},
-  author={Kottwitz, Stefan},
-  year={2015},
-  publisher={Packt Publishing Ltd}
-}
-
-@misc{bibtex,
-  author       = {CTAN}, 
-  title        = {{B}i{B}{T}e{X} Documentation},
-  url          = {https://ctan.org/topic/bibtex-doc},
-  year         = {2017}
+@article{wallenbergerGlassFibers2001,
+  title = {Glass {{Fibers}}},
+  author = {Wallenberger, Frederick T. and Watson, James C. and Li, Hong},
+  year = {2001},
+  month = jan,
+  journal = {Composites},
+  pages = {27--34},
+  publisher = {{ASM International}},
+  doi = {10.31399/asm.hb.v21.a0003353},
+  urldate = {2024-02-02},
+  abstract = {\&lt;jats:title\&gt;Abstract\&lt;/jats:title\&gt;                \&lt;jats:p\&gt;This article discusses the types, oxide composition, as well as mechanical and physical properties of general-purpose and special-purpose glass fibers. It describes the glass melting and fiber forming processes and provides information on important commercial products such as continuous roving, woven roving, fiberglass mat, chopped strand, and textile yarns.\&lt;/jats:p\&gt;},
+  file = {C:\Users\davno\Zotero\storage\RAQI7EY8\1360576122697678592.html}
 }
