Ciao to the title

--- a/Thesis.tex
+++ b/Thesis.tex
@@ -121,7 +121,7 @@
 \frontmatter % Use roman page numbering style (i, ii, iii, iv...) for the preamble pages
 
 \puttitle{
-	title=Title, % Title of the thesis
+	title=Ciao, % Title of the thesis
 	name=Name Surname, % Author Name and Surname
 	course=Xxxxxxx Engineering - Ingegneria Xxxxxxx, % Study Programme (in Italian)
 	ID  = 000000,  % Student ID number (numero di matricola)
