--- a/Thesis.tex
+++ b/Thesis.tex
@@ -122,7 +122,7 @@
 
 \puttitle{
 	title=Ciao, % Title of the thesis
-	name=Name Surname, % Author Name and Surname
+	name=Davide Notaro, % Author Name and Surname
 	course=Xxxxxxx Engineering - Ingegneria Xxxxxxx, % Study Programme (in Italian)
 	ID  = 000000,  % Student ID number (numero di matricola)
 	advisor= Prof. Name Surname, % Supervisor name
