added most of chapter 2

--- a/1_experimental_techniques.tex
+++ b/1_experimental_techniques.tex
@@ -21,9 +21,8 @@ Initially, the interaction between focused laser pulses and the target sample le
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width = \textwidth]{chapter_1/plasma_expansion_photo.png}
-    \\[40pt]
-    \caption[Photo of a plasma expanding.]{ Change in visual appearance of the laser plasma formed on soil as the air pressure was reduced.}
+    \includegraphics[width = 0.8\textwidth]{chapter_1/plasma_expansion_photo.png}
+    \caption[Photo of a plasma expanding.]{ Change in the dimensions of a laser plasma as the air pressure was reduced.}
     \label{fig:plasma_expansion}
 \end{figure}
 [PHOTO TAKEN FROM LIBS: FUNDAMENTALS AND APPLICATIONS]
@@ -46,7 +45,6 @@ Each firing of the laser produces a single LIBS measurement. Typically, however,
 \begin{figure}[H]
     \centering
     \includegraphics[width = \textwidth]{chapter_1/libs_setup.jpg}
-    \\[40pt]
     \caption{A schematic of a general apparatus for laser-induced breakdown spectroscopy illustrating the principal components.}
     \label{fig:libs_setup}
 \end{figure}
@@ -66,7 +64,6 @@ When a high-energy laser pulse is focused on the surface of a sample, if the irr
 \begin{figure}[H]
     \centering
     \includegraphics[width = 0.6\textwidth]{chapter_1/libs_life_cycle.png}
-    \\[40pt]
     \caption[LIBS life cycle.]{ Life cycle diagram showing main events in the LIBS process.}
     \label{fig:libs_life_cycle}
 \end{figure}
@@ -81,8 +78,7 @@ Under typical conditions, such as atmospheric pressure and temperature, gases ar
 Plasmas are characterized by a variety of parameters, such as the degree of ionization, the plasma temperature, and the electron density. Depending on the degree of ionization a plasma can be categorized as “weakly ionized”, where the ratio between electrons and other species is less than 10\%, or as “highly ionized” where, on the other hand, atoms could be stripped of many electrons, resulting in a very high electrons-to-ions ratio. LIBS plasmas typically fall in the first category of weakly ionized plasmas; in Figure~\ref{fig:plasma_parameters} we can see how LIBS plasmas compare in temperature and electron density relative to other types of plasma.
 \begin{figure}[H]
     \centering
-    \includegraphics[width = 0.8\textwidth]{chapter_1/plasma_parameters.png}
-    \\[30pt]
+    \includegraphics[width = 0.7\textwidth]{chapter_1/plasma_parameters.png}
     \caption{Relation between plasma parameters and type of plasma.}
     \label{fig:plasma_parameters}
 \end{figure}
@@ -93,7 +89,6 @@ However, the most interesting emissions that can be used for elemental analysis 
 \begin{figure}[H]
     \centering
     \includegraphics[width = \textwidth]{chapter_1/time_plasma_emission.png}
-    \\[20pt]
     \caption{Evolution of the emission of the LIBS plasma over time.}
     \label{fig:time_plasma_emission}
 \end{figure}
@@ -108,8 +103,7 @@ The overall line shape depends on the relative intensity of the different broade
 \begin{figure}[H]
     \centering
     \includegraphics[width = 0.6\textwidth]{chapter_1/voigt.png}
-    \\[20pt]
-    \caption{Plot of a Voigt profile}
+    \caption{Plot of a Voigt profile.}
     \label{fig:voigt}
 \end{figure}
 [taken from https://scipython.com/book/chapter-8-scipy/examples/the-voigt-profile/]
@@ -149,7 +143,6 @@ For strong lines, self-absorption will manifest as a flat-topped profile while f
 \begin{figure}[H]
     \centering
     \includegraphics[width = \textwidth]{chapter_1/self_absorption_flat.png}
-    \\[30pt]
     \caption{Flat-topped profile of a spectrum caused by self-absorption.}
     \label{fig:self_absorbed_flat}
 \end{figure}
@@ -157,7 +150,6 @@ For strong lines, self-absorption will manifest as a flat-topped profile while f
 \begin{figure}[H]
     \centering
     \includegraphics[width = 0.8\textwidth]{chapter_1/self_absorption_peak.png}
-    \\[30pt]
     \caption{Self-reversed line caused by high optical thickness.}
     \label{fig:self_absorbed_peak}
 \end{figure}
@@ -171,7 +163,6 @@ If a plasma is in thermodynamic equilibrium, it means that all the individual sp
 \begin{figure}[H]
     \centering
     \includegraphics[width = 0.8\textwidth]{chapter_1/electron_equilibrium.png}
-    \\[30pt]
     \caption{Convergence of electron temperature for an air plasma.}
     \label{fig:electron_equilibrium}
 \end{figure}
@@ -211,7 +202,6 @@ In this way there is a linear dependence between the logarithm of a parameter re
 \begin{figure}[H]
     \centering
     \includegraphics[width = 0.7\textwidth]{chapter_1/boltzmann_plot.png}
-    \\[20pt]
     \caption{Multi-line Boltzmann plot based on uranium data.}
     \label{fig:boltzmann_plot_example}
 \end{figure}
@@ -291,7 +281,6 @@ When using nanosecond pulses, the generated craters typically exhibit melted and
 \begin{figure}[H]
     \centering
     \includegraphics[width = 0.7\textwidth]{chapter_1/craters_laser_duration.jpg}
-    \\[40pt]
     \caption{SEM images of craters produced by different types of laser.}
     \label{fig:craters_laser_duration}
 \end{figure}
@@ -304,7 +293,7 @@ Once the plasma has been ignited, the emitted light is collected by a detector, 
 \begin{figure}[H]
     \centering
     \includegraphics[width = \textwidth]{chapter_1/generic_spectrum.pdf}
-    \\[20pt]
+    \vspace*{-30pt}
     \caption{LIBS spectrum of a pure silica sample we measured.}
     \label{fig:generic_spectrum}
 \end{figure}
