--- a/Thesis.tex
+++ b/Thesis.tex
@@ -83,7 +83,8 @@
 
 %ADDED PACKAGES BY DAVIDE
 \usepackage{caption} 
-\captionsetup[figure]{skip=-25pt}
+\usepackage{mhchem}
+%\captionsetup[figure]{skip=-25pt}
 
 % Input of configuration file. Do not change config.tex file unless you really know what you are doing. 
 \input{Configuration_Files/config}
@@ -241,6 +242,9 @@ If necessary, an unnumbered chapter can be created by
 
 \chapter{Experimental Techniques}
 \input{1_experimental_techniques.tex}
+
+\chapter{Glass Manufacturing}
+\input{2_glass_manufacturing.tex}
 
 \chapter{Chapter one}
 \label{ch:chapter_one}%
