added a table and few images

--- a/Thesis.tex
+++ b/Thesis.tex
@@ -370,6 +370,33 @@ can contain multiple sub-figures with their own caption and label, e.g. \color{b
 \subsection{Tables}
 \label{subsec:tables}
 
+\begin{table}[H]
+\centering 
+\begin{tabular}{|l|c|c|}
+\hline
+                               & Unit   & \multicolumn{1}{l|}{Value Range} \\ \hline
+Water Temperature              & °C     & 5,9-16,7                                  \\ \hline
+PH Value                       &        & 7,7-8,2                                   \\ \hline
+Total alkaline earths          & mol/m³ & 1,4                                       \\ \hline
+Calcium                        & mg/l   & 40,1-42,5                                 \\ \hline
+Magnesium                      & mg/l   & 7,33-9,03                                 \\ \hline
+Sodium                         & mg/l   & 7,4-10,9                                  \\ \hline
+Potassium                      & mg/l   & 0,9-1,3                                   \\ \hline
+Chloride                       & mg/l   & 10,8-14,7                                 \\ \hline
+Nitrate                        & mg/l   & 14,9-19,3                                 \\ \hline
+Sulfate                        & mg/l   & 25-35                                     \\ \hline
+Phosphorus Compounds           & mg/l   & \textless{}0,1                            \\ \hline
+Silicon Compounds              & mg/l   & 5,0-7,4                                   \\ \hline
+Organically Bound Carbon (TOC) & mg/l   & 0,7-1,0                                   \\ \hline
+Aluminium                      & mg/l   & 0,02-0,03                                 \\ \hline
+Oxygen                         & mg/l   & 9,2-13,0                                  \\ \hline
+\end{tabular}
+
+    \label{table:water_composition}
+\end{table}
+
+
+
 Within the environments \texttt{table} and  \texttt{tabular} you can create very fancy tables as the one shown in Table~\ref{table:example}.
 \begin{table}[H]
     \caption*{\textbf{Title of Table (optional)}}
